# cpp-configurable-class

./: .gitignore  CMakeLists.txt  README.md  test.cfg
src/: CMakeLists.txt
src/niragne/: configurable.h  singleton.h
test/: main.cpp  test.h
